lib/schemas/AuthorizeSecurityGroupIngress.in.json
{
    "type": "object",
    "properties": {
        "Action": {
            "required": true,
            "type": "string"
        },
        "Version": {
            "required": true,
            "type": "string"
        },
        "requestBody": {
            "example": {
                "GroupId": "sg-123abc12 ",
                "IpPermissions": [
                    {
                        "FromPort": 3389,
                        "IpProtocol": "tcp",
                        "Ipv6Ranges": [
                            {
                                "CidrIpv6": "2001:db8:1234:1a00::/64",
                                "Description": "RDP access from the NY office"
                            }
                        ],
                        "ToPort": 3389
                    }
                ]
            },
            "properties": {
                "CidrIp": {
                    "description": "The CIDR IPv4 address range. You can't specify this parameter when specifying a source security group.",
                    "type": "string"
                },
                "DryRun": {
                    "description": "Checks whether you have the required permissions for the action, without actually making the request, and provides an error response. If you have the required permissions, the error response is <code>DryRunOperation</code>. Otherwise, it is <code>UnauthorizedOperation</code>.",
                    "type": "boolean"
                },
                "FromPort": {
                    "description": "The start of port range for the TCP and UDP protocols, or an ICMP/ICMPv6 type number. For the ICMP/ICMPv6 type number, use <code>-1</code> to specify all types. If you specify all ICMP/ICMPv6 types, you must specify all codes.",
                    "type": "integer"
                },
                "GroupId": {
                    "description": "The ID of the security group. You must specify either the security group ID or the security group name in the request. For security groups in a nondefault VPC, you must specify the security group ID.",
                    "type": "string"
                },
                "GroupName": {
                    "description": "[EC2-Classic, default VPC] The name of the security group. You must specify either the security group ID or the security group name in the request.",
                    "type": "string"
                },
                "IpPermissions": {
                    "description": "One or more sets of IP permissions. Can be used to specify multiple rules in a single command.",
                    "items": {
                        "description": "Describes a set of permissions for a security group rule.",
                        "properties": {
                            "FromPort": {
                                "description": "The start of port range for the TCP and UDP protocols, or an ICMP/ICMPv6 type number. A value of <code>-1</code> indicates all ICMP/ICMPv6 types. If you specify all ICMP/ICMPv6 types, you must specify all codes.",
                                "type": "integer"
                            },
                            "IpProtocol": {
                                "description": "<p>The IP protocol name (<code>tcp</code>, <code>udp</code>, <code>icmp</code>) or number (see <a href=\"http://www.iana.org/assignments/protocol-numbers/protocol-numbers.xhtml\">Protocol Numbers</a>). </p> <p>[EC2-VPC only] Use <code>-1</code> to specify all protocols. When authorizing security group rules, specifying <code>-1</code> or a protocol number other than <code>tcp</code>, <code>udp</code>, <code>icmp</code>, or <code>58</code> (ICMPv6)  [...]
                                "type": "string"
                            },
                            "IpRanges": {
                                "description": "One or more IPv4 ranges.",
                                "items": {
                                    "description": "Describes an IPv4 range.",
                                    "properties": {
                                        "CidrIp": {
                                            "description": "The IPv4 CIDR range. You can either specify a CIDR range or a source security group, not both. To specify a single IPv4 address, use the /32 prefix length.",
                                            "type": "string"
                                        },
                                        "Description": {
                                            "description": "<p>A description for the security group rule that references this IPv4 address range.</p> <p>Constraints: Up to 255 characters in length. Allowed characters are a-z, A-Z, 0-9, spaces, and ._-:/()#,@[]+=;{}!$*</p>",
                                            "type": "string"
                                        }
                                    },
                                    "type": "object"
                                },
                                "type": "array"
                            },
                            "Ipv6Ranges": {
                                "description": "[EC2-VPC only] One or more IPv6 ranges.",
                                "items": {
                                    "description": "[EC2-VPC only] Describes an IPv6 range.",
                                    "properties": {
                                        "CidrIpv6": {
                                            "description": "The IPv6 CIDR range. You can either specify a CIDR range or a source security group, not both. To specify a single IPv6 address, use the /128 prefix length.",
                                            "type": "string"
                                        },
                                        "Description": {
                                            "description": "<p>A description for the security group rule that references this IPv6 address range.</p> <p>Constraints: Up to 255 characters in length. Allowed characters are a-z, A-Z, 0-9, spaces, and ._-:/()#,@[]+=;{}!$*</p>",
                                            "type": "string"
                                        }
                                    },
                                    "type": "object"
                                },
                                "type": "array"
                            },
                            "PrefixListIds": {
                                "description": "[EC2-VPC only] One or more prefix list IDs for an AWS service. With <a>AuthorizeSecurityGroupEgress</a>, this is the AWS service that you want to access through a VPC endpoint from instances associated with the security group.",
                                "items": {
                                    "description": "Describes a prefix list ID.",
                                    "properties": {
                                        "Description": {
                                            "description": "<p>A description for the security group rule that references this prefix list ID.</p> <p>Constraints: Up to 255 characters in length. Allowed characters are a-z, A-Z, 0-9, spaces, and ._-:/()#,@[]+=;{}!$*</p>",
                                            "type": "string"
                                        },
                                        "PrefixListId": {
                                            "description": "The ID of the prefix.",
                                            "type": "string"
                                        }
                                    },
                                    "type": "object"
                                },
                                "type": "array"
                            },
                            "ToPort": {
                                "description": "The end of port range for the TCP and UDP protocols, or an ICMP/ICMPv6 code. A value of <code>-1</code> indicates all ICMP/ICMPv6 codes for the specified ICMP type. If you specify all ICMP/ICMPv6 types, you must specify all codes.",
                                "type": "integer"
                            },
                            "UserIdGroupPairs": {
                                "description": "One or more security group and AWS account ID pairs.",
                                "items": {
                                    "description": "Describes a security group and AWS account ID pair.",
                                    "properties": {
                                        "Description": {
                                            "description": "<p>A description for the security group rule that references this user ID group pair.</p> <p>Constraints: Up to 255 characters in length. Allowed characters are a-z, A-Z, 0-9, spaces, and ._-:/()#,@[]+=;{}!$*</p>",
                                            "type": "string"
                                        },
                                        "GroupId": {
                                            "description": "The ID of the security group.",
                                            "type": "string"
                                        },
                                        "GroupName": {
                                            "description": "<p>The name of the security group. In a request, use this parameter for a security group in EC2-Classic or a default VPC only. For a security group in a nondefault VPC, use the security group ID. </p> <p>For a referenced security group in another VPC, this value is not returned if the referenced security group is deleted.</p>",
                                            "type": "string"
                                        },
                                        "PeeringStatus": {
                                            "description": "The status of a VPC peering connection, if applicable.",
                                            "type": "string"
                                        },
                                        "UserId": {
                                            "description": "<p>The ID of an AWS account.</p> <p>For a referenced security group in another VPC, the account ID of the referenced security group is returned in the response. If the referenced security group is deleted, this value is not returned.</p> <p>[EC2-Classic] Required when adding or removing rules that reference a security group in another AWS account.</p>",
                                            "type": "string"
                                        },
                                        "VpcId": {
                                            "description": "The ID of the VPC for the referenced security group, if applicable.",
                                            "type": "string"
                                        },
                                        "VpcPeeringConnectionId": {
                                            "description": "The ID of the VPC peering connection, if applicable.",
                                            "type": "string"
                                        }
                                    },
                                    "type": "object"
                                },
                                "type": "array"
                            }
                        },
                        "type": "object"
                    },
                    "type": "array"
                },
                "IpProtocol": {
                    "description": "The IP protocol name (<code>tcp</code>, <code>udp</code>, <code>icmp</code>) or number (see <a href=\"http://www.iana.org/assignments/protocol-numbers/protocol-numbers.xhtml\">Protocol Numbers</a>). (VPC only) Use <code>-1</code> to specify all protocols. If you specify <code>-1</code>, or a protocol number other than <code>tcp</code>, <code>udp</code>, <code>icmp</code>, or <code>58</code> (ICMPv6), traffic on all ports is allowed, regardless of any ports you [...]
                    "type": "string"
                },
                "SourceSecurityGroupName": {
                    "description": "[EC2-Classic, default VPC] The name of the source security group. You can't specify this parameter in combination with the following parameters: the CIDR IP address range, the start of the port range, the IP protocol, and the end of the port range. Creates rules that grant full ICMP, UDP, and TCP access. To create a rule with a specific IP protocol and port range, use a set of IP permissions instead. For EC2-VPC, the source security group must be in the same V [...]
                    "type": "string"
                },
                "SourceSecurityGroupOwnerId": {
                    "description": "[nondefault VPC] The AWS account ID for the source security group, if the source security group is in a different account. You can't specify this parameter in combination with the following parameters: the CIDR IP address range, the IP protocol, the start of the port range, and the end of the port range. Creates rules that grant full ICMP, UDP, and TCP access. To create a rule with a specific IP protocol and port range, use a set of IP permissions instead.",
                    "type": "string"
                },
                "ToPort": {
                    "description": "The end of port range for the TCP and UDP protocols, or an ICMP/ICMPv6 code number. For the ICMP/ICMPv6 code number, use <code>-1</code> to specify all codes. If you specify all ICMP/ICMPv6 types, you must specify all codes.",
                    "type": "integer"
                }
            },
            "type": "object"
        },
        "X_Amz_Content_Sha256": {
            "required": false,
            "type": "string"
        },
        "X_Amz_Date": {
            "required": false,
            "type": "string"
        },
        "X_Amz_Algorithm": {
            "required": false,
            "type": "string"
        },
        "X_Amz_Credential": {
            "required": false,
            "type": "string"
        },
        "X_Amz_Security_Token": {
            "required": false,
            "type": "string"
        },
        "X_Amz_Signature": {
            "required": false,
            "type": "string"
        },
        "X_Amz_SignedHeaders": {
            "required": false,
            "type": "string"
        }
    }
}
